[package]
name = "hello-world"
version = "0.0.1"
authors = ["Dmitry Kalmykov"]
edition = "2018"
features = ["os-poll", "tcp"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
mio = "0.6"
# piston window wrapper for Piston game engine
piston_window = "0.109.0"

piston = "0.50.0"
# find pic in folder to attach next
find_folder = ""

# piston game engine
piston2d-graphics = "0.36.0"
pistoncore-glutin_window = "0.64.0"
piston2d-opengl_graphics = "0.72.0"
